_sass/_profile.scss
.profile-thumbnail {
  object-fit: cover;
  object-position: center top;
  width: 150px;
  height: 150px;
}

.people {
  margin: auto;
  text-align: center;
  margin-top: 0.75em;
}

.list-item-people {
  display: inline-flex;
  padding: 5px;
  width: 220px;
}

